--- a/CheckerStats.html
+++ b/CheckerStats.html
@@ -1,1 +1,1 @@
-{"Version":"0.1","Discord_Link":"xd","Discord_Username":"SoLegit#4423","NewVersionLink":"xd"}
+{"version":"0.1","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"SoLegit#4423","newversionlink":"xd"}
