--- a/CheckerStats.html
+++ b/CheckerStats.html
@@ -1,1 +1,1 @@
-{"version":"0.1","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"SoLegit#4423","newversionlink":"xd"}
+{"version":"0.2","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"SoLegit#4423","newversionlink":"https://github.com/SoLegitxD/solegitxd.github.io/raw/master/Deng_Checker.exe"}
