--- a/CheckerStats.html
+++ b/CheckerStats.html
@@ -1,1 +1,1 @@
-{"version":"0.5","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"SoLegit#4423","newversionlink":"https://github.com/SoLegitxD/solegitxd.github.io/raw/master/Deng_Checker.exe"}
+{"version":"0.6","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"SoLegit#4423","newversionlink":"https://cdn.discordapp.com/attachments/502846671156150274/513676246203498496/Deng_Checker.exe"}
