--- a/CheckerStats.html
+++ b/CheckerStats.html
@@ -1,1 +1,1 @@
-{"version":"0.8","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"@AmNotSoLegit#7272","newversionlink":"None"}
+{"version":"0.9","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"AmNotSoLegit#7272","newversionlink":"https://cdn.discordapp.com/attachments/482516240901079061/514422550844014612/Deng_Checker.exe"}
