--- a/CheckerStats.html
+++ b/CheckerStats.html
@@ -1,1 +1,1 @@
-{"version":"1.1","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"AmNotSoLegit#7272","newversionlink":"https://cdn.discordapp.com/attachments/488594245305761792/515071434754621441/Deng_Checker.exe"}
+{"version":"2.1","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"AmNotSoLegit#7272","newversionlink":"http://lazyalts.ga/lazychecker/Deng_Checker.exe"}
