--- a/CheckerStats.html
+++ b/CheckerStats.html
@@ -1,1 +1,1 @@
-{"version":"2.3","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"AmNotSoLegit#7272","newversionlink":"http://lazyalts.ga/lazychecker/Deng_Checker.exe"}
+{"version":"2.3","discord_Link":"https://discord.gg/jbaM9yK | Old Version Didn't WORKING NOW! DOWNLOAD NEW IN OUR DISCORD!","discord_Username":"AmNotSoLegit#7272","newversionlink":"http://lazyalts.ga/lazychecker/Deng_Checker.exe"}
