--- a/source/example2.html
+++ b/source/example2.html
@@ -1,1 +1,1 @@
-{"version":"2.7","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"AmNotSoLegit#7272","newversionlink":"http://lazyalts.ga/lazychecker/Deng_Checker.exe", "configversion":"2.8", "configlink": ""}
+{"version":"2.7","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"AmNotSoLegit#7272","newversionlink":"http://lazyalts.ga/lazychecker/Deng_Checker.exe", "configversion":"2.8", "configlink": "https://cdn.discordapp.com/attachments/531460152952356879/539334187447091220/config.yml"}
