--- a/source/example2.html
+++ b/source/example2.html
@@ -1,1 +1,1 @@
-{"version":"3.0","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"A Lolicon#7272","newversionlink":"https://lazyalts.ga/lazychecker/Deng_Checker.exe", "configversion":"3.0", "configlink": "https://lazyalts.ga/lazychecker/config.yml"}
+{"version":"3.0","discord_Link":"https://discord.gg/jbaM9yK - 2.9 didn't work, download 3.0 in our discord!","discord_Username":"A Lolicon#7272","newversionlink":"https://lazyalts.ga/lazychecker/Deng_Checker.exe", "configversion":"3.0", "configlink": "https://lazyalts.ga/lazychecker/config.yml"}
