--- a/source/example.html
+++ b/source/example.html
@@ -1,1 +1,1 @@
-example
+{"version":"1.0","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"ahhh random person#0069","newversionlink":"https://lazyalts.ga/lazychecker/Deng_Checker.exe","configlink": "https://lazyalts.ga/lazychecker/config.yml"}
