--- a/source/example.html
+++ b/source/example.html
@@ -1,1 +1,1 @@
-{"version":"1.1","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"A Cheater Lolicon#0690","newversionlink":"https://lazyalts.ga/lazychecker/Lazy_Checker.exe","announcement": "testnahhhh"}
+{"version":"1.1","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"A Cheater Lolicon#0690","newversionlink":"https://lazyalts.ga/lazychecker/Lazy_Checker.exe","announcement": ""}
