--- a/source/example.html
+++ b/source/example.html
@@ -1,1 +1,1 @@
-{"version":"1.4","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"hard 0n osu#0690","newversionlink":"https://lazyalts.ga/lazychecker/Lazy_Checker.exe","announcement": "", "configlink":"https://lazyalts.ga/lazychecker/config.yml"}
+{"version":"1.5","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"not call police#2008","newversionlink":"https://lazyalts.ga/lazychecker/Lazy_Checker.exe","announcement": "", "configlink":"https://lazyalts.ga/lazychecker/config.yml"}
