--- a/source/example.html
+++ b/source/example.html
@@ -1,1 +1,1 @@
-{"version":"1.7","discord_Link":"https://discord.gg/jbaM9yK","discord_Username":"SoLegit#0069","newversionlink":"https://lazyalts.ga/lazychecker/Lazy_Checker.exe","announcement": "", "configlink":"https://lazyalts.ga/lazychecker/config.yml"}
+{"version":"1.7","discord_Link":"https://discord.gg/57jX47h","discord_Username":"SoLegit#0069","newversionlink":"https://lazyalts.ga/lazychecker/Lazy_Checker.exe","announcement": "", "configlink":"https://lazyalts.ga/lazychecker/config.yml"}
