--- a/source/example3.html
+++ b/source/example3.html
@@ -1,1 +1,1 @@
-{"version":"3.4","discord_link":"https://discord.gg/qDBGeRX","discord_username":"SoLegit#6996","link":"https://lazyalts.ga/lazychecker/Lazy_Checker.rar","announcement": "Redownload in: http://lazyalts.ga/lazychecker/Lazy_Checker.rar | Make sure install java 8! | Note: Timeout unit is milliseconds", "clink": ""}
+{"version":"3.5","discord_link":"https://discord.gg/qDBGeRX","discord_username":"SoLegit#0069","link":"https://lazyalts.com/lazychecker/Lazy_Checker.rar","announcement": "Change domain from lazyalts.ga to lazyalts.com", "clink": ""}
