--- a/source/example3.html
+++ b/source/example3.html
@@ -1,1 +1,1 @@
-{"version":"4.0","discord_link":"https://discord.gg/qDBGeRX","discord_username":"SoLegit#0069","link":"https://lazyalts.com/lazychecker/lazychecker","announcement": "Redownload .net version in http://lazyalts.com/lazychecker/lazychecker", "clink": ""}
+{"version":"4.1","discord_link":"https://discord.gg/qDBGeRX","discord_username":"SoLegit#0069","link":"http://lazyalts.com/lazychecker/lazyupdate","announcement": "Redownload .net version in http://lazyalts.com/lazychecker/lazychecker", "clink": ""}
